plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'org.noxylva.oplusaod'
    compileSdk 34

    defaultConfig {
        applicationId "org.noxylva.oplusaod"
        minSdk 24
        targetSdk 34
        versionCode 6
        versionName "0.0.6"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

dependencies {
    compileOnly 'de.robv.android.xposed:api:82'
    implementation libs.appcompat
    implementation libs.material
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'com.github.bumptech.glide:glide:4.16.0'
    implementation 'com.google.android.material:material:1.12.0'
    implementation(platform("io.github.rosemoe:editor-bom:0.23.7"))
    implementation 'io.github.rosemoe:editor'
    implementation 'io.github.rosemoe:language-textmate'
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}